[workspace]

members = [
    "wasm-paint",
    "paintcore",
]

resolver = "3"

[workspace.dependencies]
wml2 = { git = "https://github.com/mith-mmk/wml2-on-rust", rev = "ab3293d7898448cd14319794c4839ade7f21ac9b"}
#wml2 = { git = "https://github.com/mith-mmk/wml2-on-rust", tag = "0.0.16"}

