[workspace]

members = [
    "wasm-paint",
    "paintcore",
]

resolver = "3"

[workspace.dependencies]
wml2 = {version = "0.0.18"}
#wml2 = { git = "https://github.com/mith-mmk/wml2-on-rust", rev = "a95f5e69251e460b5ed1012ea8e7c687bd66982b"}
fontloader = { git = "https://github.com/mith-mmk/FontReader.git", rev = "3799538b571f469b9fb76a69737c6155cc699d83"}
