[workspace]

members = [
    "wasm-paint",
    "paintcore",
]

resolver = "3"

[workspace.dependencies]
wml2 = {version = "0.0.18"}
#wml2 = { git = "https://github.com/mith-mmk/wml2-on-rust", rev = "a95f5e69251e460b5ed1012ea8e7c687bd66982b"}
# 0.0.4 or later
fontloader = { git = "https://github.com/mith-mmk/FontReader.git", rev = "d8bc5a0"}
