[package]
name = "paintcore"
version = "0.0.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies.wml2]
git = "https://github.com/mith-mmk/wml2-on-rust"
version = "0.0.11"

[definitions.fontloader]
git = "https://github.com/mith-mmk/FontReader"
version = "0.0.1"