[package]
name = "paintcore"
version = "0.0.25"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]
font = ["dep:fontloader"]

[dependencies]
wml2.workspace = true
fontloader = { git = "https://github.com/mith-mmk/FontReader.git", branch = "main", optional = true }
