[package]
name = "paint"
version = "0.0.23"
authors = ["mith-mmk <47620686+mith-mmk@users.noreply.github.com>"]
edition = "2024"
license = "MIT"
keywords= ["wasm","paint","graphics"]
rust-version = "1.91"

[lib]
crate-type = ["cdylib"] 

[features]
default = ["console_error_panic_hook"]
stdweb = [ "instant/stdweb" ]

[dependencies]
paintcore = { path="../paintcore" }
wasm-bindgen = "0.2"
js-sys = "0.3"
instant = "0.1"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'ImageData',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]

[dependencies.wml2]
git = "https://github.com/mith-mmk/wml2-on-rust"
version = "0.0.11"
#path = "../wml2/wml2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
js-sys = "0.3"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
